# consentvault

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  Makefile  README.md  alembic.ini  api.Dockerfile.prod  docker-compose.dev.yml  docker-compose.yml  generate_key.py  gunicorn_conf.py  package.json  pnpm-lock.yaml  pyproject.toml  setup_org.py
.github/workflows/: ci.yml  prod.yml  qa.yml
apps/: __init__.py
apps/api/: Dockerfile  alembic.ini  requirements.txt
apps/api/app/: __init__.py  config.py  db.py  deps.py  main.py  schemas.py  security.py
apps/api/migrations/: env.py
apps/api/scripts/: reset_dev_data.py
apps/web/: .dockerignore  Dockerfile  README.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
docker/: api.Dockerfile  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  response.json  wait-for-db.sh  worker.Dockerfile
docker/env/: .env.test
docker/nginx/: nginx.prod.conf
docs/: README.md  RUNBOOK.md  architecture.md  audit_logging.md  makefile.md  organizations.md  running.md
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_users_and_userrole.py  003_add_users_and_userrole_enum.py  004_add_api_audit_logs.py  5b82b01ebf96_add_request_body_to_api_audit_logs.py  698b90a4bf92_add_dataregion_enum_values_and_role_to_.py  e930a64d1b97_add_verified_at_to_api_audit_logs.py  fb6666668b4b_add_indexes_for_audit_metrics.py
scripts/: assign_user_to_org.py  create_org.py  create_user.py  create_user_safe.py  devops_reset_local.sh  devops_reset_staging.sh  devops_up_fast.sh  devops_validate.sh  devops_validate_local.sh  fix_schema.py  gen_audit_keypair.py  generate_secrets.sh  link_user_to_org.py  promote_org_role.py  promote_user.py  seed_data.py  smoke_test.sh  test_all.py  test_all.sh  test_local_auth.sh  test_seed.py  validate_imports.py  verify_audit_signature.py
tests/: conftest.py  test_auth.py  test_consents_flow.py  test_rights_flow.py  test_smoke.py  test_users.py  test_webhooks.py
(+158 files in other folders)
